fx: Update examples, fix bugs and switch to `fxlog`

--- a/examples/todoapi/.env
+++ b/examples/todoapi/.env
@@ -1,2 +1,5 @@
 DATABASE_URL=postgres:///todoapi?sslmode=disable
-DEBUG_REQUEST=1
+
+# turn on/off to get incoming and outgoing payload printed to stdout
+DEBUG_REQUEST=0
+DEBUG_RESPONSE=0
